@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2003/12/29 13:19:34 grant Exp $
